# auto-captcha-solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  quickstart.md
hermes-skill/: SKILL.md
src/auto_captcha/: __init__.py  cli.py  mcp_server.py  solver.py  wrapper.py
src/auto_captcha.egg-info/: entry_points.txt  requires.txt
src/auto_captcha/providers/: base.py  captchaai.py
src/auto_captcha_solver/: __init__.py  cli.py  mcp_server.py  solver.py  types.py  wrapper.py
src/auto_captcha_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/auto_captcha_solver/providers/: __init__.py  nopecha.py
tests/: conftest.py  integration_browser_test.py  test_captchaai.py  test_cli.py  test_mcp.py  test_solver.py
