[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-captcha-solver"
version = "0.1.4"
description = "Universal captcha solver for Playwright automation — hCaptcha, reCAPTCHA v2/v3, and Cloudflare Turnstile via NopeCHA API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Suhaas Chitturi", email = "sun@mail.com"}
]
keywords = [
    "captcha",
    "hcaptcha",
    "recaptcha",
    "turnstile",
    "playwright",
    "automation",
    "browser",
    "solver",
    "mcp",
    "nopecha"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "requests>=2.28.0",
    "typing-extensions>=4.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
playwright = ["playwright>=1.30.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-playwright>=0.4.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]
all = ["playwright>=1.30.0"]

[project.scripts]
auto-captcha = "auto_captcha_solver.cli:main"

[project.urls]
Homepage = "https://github.com/interfluve-wav/auto-captcha-solver"
Repository = "https://github.com/interfluve-wav/auto-captcha-solver"
Issues = "https://github.com/interfluve-wav/auto-captcha-solver/issues"
Documentation = "https://github.com/interfluve-wav/auto-captcha-solver#readme"
Changelog = "https://github.com/interfluve-wav/auto-captcha-solver/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "W", "I", "UP", "B", "C4"]
lint."extend-ignore" = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:.*invalid escape sequence \.:DeprecationWarning",
    "ignore:.*urllib3 v2 only supports OpenSSL.*:NotOpenSSLWarning",
    "ignore::DeprecationWarning:.*",
]

testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
